# 2025fa-420-FloatingPointErrorists

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: exconfig.json
data/: none.csv
src/: courses.py  faculty.py  main.py
src/scheduler_cli/: __init__.py  base_cli.py  cli.py  course_cli.py  courses.py  faculty.py  faculty_cli.py  json.py  lab.py  lab_cli.py  main.py  room.py  room_cli.py  run_scheduler.py
src/scheduler_cli/cli/: base_cli.py  course_cli.py  faculty_cli.py  lab_cli.py  room_cli.py
src/scheduler_cli/controller/: test.py  testing.py  viewer_controller.py
src/scheduler_cli/gui/: base_gui.py  main.py
src/scheduler_cli/model/: courses.py  faculty.py  json.py  lab.py  room.py  run_scheduler.py
src/scheduler_cli/object_clis/: course_cli.py  faculty_cli.py  lab_cli.py  room_cli.py
src/scheduler_cli/view/: base_gui.py  view.py
src/scheduler_config_editor/: __init__.py  main.py
src/scheduler_config_editor/cli/: __init__.py  base_cli.py  course_cli.py  faculty_cli.py  lab_cli.py  room_cli.py  schedule_cli.py  schedule_viewer.py
src/scheduler_config_editor/controller/: schedule_controller.py  testing.py
src/scheduler_config_editor/model/: __init__.py  courses.py  faculty.py  json.py  lab.py  room.py  run_scheduler.py  schedule_handler.py  schedules.py
src/scheduler_config_editor/object_clis/: faculty_cli.py  lab_cli.py
src/scheduler_config_editor/view/: __init__.py  base_gui.py  faculty_editor_gui.py  room_editor_gui.py  schedule_window.py  view.py
unittests/: base.json  dummy.json  test_cli.py  test_courses.py  test_faculty.py  test_lab.py  test_room.py
