[project]
name = "scheduler_config_editor"
version = "0.1.1"
description = "A program that allows for JSON config modification and schedule generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "course-constraint-scheduler",
    "click",
    "click-shell",
    "PyQt6",
    "tabulate",
    "types-tabulate"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
lint.select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
src = ["src"]
fix = true

[project.scripts]
sce = "scheduler_config_editor.main:main"
